--- a/arg/dvorak.tex
+++ b/arg/dvorak.tex
@@ -3,13 +3,13 @@
 
 \begin{document}
 
-\title{Dvo\v{r}\'ak Overview 1998}
+\title{Dvořák Overview 1998}
 \date{}
 \maketitle
 
 \addcontentsline{toc}{section}{\protect\textbf{Introduction}}
 \noindent
-Dvo\v{r}\'ak was an inventive and spontaneous composer---a ``natural''.
+Dvořák was an inventive and spontaneous composer---a ``natural''.
 His music always flows, never sags, never seems abstract or sterile. 
 There are no tensions, no great yearnings.
 Even at his least inspired he is genial and pleasant and relaxed-without guile-and at his most inspired
@@ -21,9 +21,9 @@ the birds for much of his use of woodwinds (you can hear that).
 His favorite score marking is grandioso, and when a conductor 
 is on his wavelength you hear plenty of grandeur and majesty. 
 As you are well aware, these elements increasingly elude living conductors, 
-and more and more we are living in a world with no sense of grandeur or majesty. Dvo\v{r}\'ak can be made exciting
+and more and more we are living in a world with no sense of grandeur or majesty. Dvořák can be made exciting
 and will always be beautiful-without grandeur, but something will also be missing.
-Antonin Dvo\v{r}\'ak was born September 8, 1841 in Bohemia, the eldest of eight children 
+Antonin Dvořák was born September 8, 1841 in Bohemia, the eldest of eight children 
 of essentially peasant stock---his father ran the local pub. He played the violin as a child. At 16
 he went to Prague to study music. His earliest models were Beethoven and Schubert;
 he spoke of Beethoven with awe but of Schubert with love.
@@ -36,10 +36,10 @@ in New York and spent the summers traveling in the USA.
 In 1897 he was supposed to return to the USA but begged off---some think because
 he was so upset over the death of his friend Brahms. He died in Prague in May 1904.
 
-To discover a new Dvo\v{r}\'ak work is to enlarge one's list of favorites. Everyone knows the 9th Symphony---the New World---and when you go back from there you find one sparkling treasure after another. Many critics consider 7 and 8 greater symphonies than 9. Wherever it is performed, audiences still greet 6 with spontaneous enthusiasm. \No5 is exciting, and \No4 has two powerful Dvo\v{r}\'ak hythms. The Third is sumptuous in its orchestration, and \No1 is very winsome. Only \No2 can safely be ignored.
+To discover a new Dvořák work is to enlarge one's list of favorites. Everyone knows the 9th Symphony---the New World---and when you go back from there you find one sparkling treasure after another. Many critics consider 7 and 8 greater symphonies than 9. Wherever it is performed, audiences still greet 6 with spontaneous enthusiasm. \No5 is exciting, and \No4 has two powerful Dvořák hythms. The Third is sumptuous in its orchestration, and \No1 is very winsome. Only \No2 can safely be ignored.
 
 \section{Symphonies}
-The late publication dates of many Dvo\v{r}\'ak symphonies account for the numbering problem.
+The late publication dates of many Dvořák symphonies account for the numbering problem.
 Only five were published by Simrock, and they were numbered 1-5,
 naturally. When the others were published in the 1950s and 60s the numbering
 was revised to reflect the order they were written. Here's a chart explaining that.
@@ -56,20 +56,20 @@ was revised to reflect the order they were written. Here's a chart explaining th
 \item G, was No. 4
 \item E minor, New World, was No. 5
 \end{enumerate}
-Some of the important books about Dvo\v{r}\'ak were published before the early symphonies were published. For example, Alec Robertson's book has a chapter on the symphonies that acknowledges right off that ``I can only speak of the first three symphonies at second hand'', and he proceeds to say almost nothing---and nothing worthwhile---about 1 and 2.
+Some of the important books about Dvořák were published before the early symphonies were published. For example, Alec Robertson's book has a chapter on the symphonies that acknowledges right off that ``I can only speak of the first three symphonies at second hand'', and he proceeds to say almost nothing---and nothing worthwhile---about 1 and 2.
 
 \subsection*{Symphony 1}
 
-People who write about Dvo\v{r}\'ak's symphonies are very condescending about \No1. Karl Schumann's notes for the Kubelik set begin with something that does seem true:
+People who write about Dvořák's symphonies are very condescending about \No1. Karl Schumann's notes for the Kubelik set begin with something that does seem true:
 \begin{quote}
-Dvo\v{r}\'ak, with the emotional directness of his Slavic nature, open-hearted and filled with the urge to pour out his feelings in music, was too naive to experience the doubts that afflicted other composers when it came to tackling the problems of the symphony.
+Dvořák, with the emotional directness of his Slavic nature, open-hearted and filled with the urge to pour out his feelings in music, was too naive to experience the doubts that afflicted other composers when it came to tackling the problems of the symphony.
 \end{quote}
-Having said that, he points out that Dvo\v{r}\'ak wrote No. 1 when he was only 23, "although he had not mastered the problems which the form posed". He goes on to say that the work "shows the hand of a beginner". And that's about it: he says almost nothing further about it.
+Having said that, he points out that Dvořák wrote No. 1 when he was only 23, "although he had not mastered the problems which the form posed". He goes on to say that the work "shows the hand of a beginner". And that's about it: he says almost nothing further about it.
 
 I cannot dismiss it like that. Sometime around 1970 I bought the Kertesz LP and fell in love with the first movement, with its gorgeous spinning-wheel theme for lower strings and brass. I have listened to every recording of it to come out since, and I've reached the stage where the only movement that doesn't excite me wildly is II, the Adagio. It is bland and leaves no impression; I think it is there for contrast (repose), and it was not intended to make a strong impression. But the Scherzo is a work of genius, reaching a peak in much the same manner as the scherzo in Beethoven's Fifth.
 
-The finale is typical of Dvo\v{r}\'ak; it even has a great example of ``Dvo\v{r}\'ak rhythm''.
-And it builds to a thrilling conclusion. Every time I listen to this symphony I love it more. It certainly has a bit of Schumann in it---and of Mendelssohn---but it is truly Dvo\v{r}\'ak: full of his special genius and the splendor of his orchestral sounds. Yet Dvo\v{r}\'ak never heard it, and it wasn't published until 1961. The Kertesz was the first recording (1965, I think).
+The finale is typical of Dvořák; it even has a great example of ``Dvořák rhythm''.
+And it builds to a thrilling conclusion. Every time I listen to this symphony I love it more. It certainly has a bit of Schumann in it---and of Mendelssohn---but it is truly Dvořák: full of his special genius and the splendor of his orchestral sounds. Yet Dvořák never heard it, and it wasn't published until 1961. The Kertesz was the first recording (1965, I think).
 
 Recordings have followed by Rowicki, Kubelik, Neumann, Suitner, Järvi, Gunzenhauser, and Macal. Having heard these, I have decided to discuss the four that I think are the strongest contenders for your dollars: Macal, Neumann, Kubelik, and Kertesz. First, the timings:
 
@@ -87,7 +87,7 @@ IV & 11:18 & 13:30 & 13:36 & 14:40\\
 Koss has the best sound of all---fairly close to the Kertesz LP, but I think the Kertesz on CD is not as smooth.
 Supraphon is closer to the strings, and that makes that bass spinning-wheel
 theme all the more imposing; but when the violins go at it full blast, they are so bright 
-that you blink Still, What is Dvo\v{r}\'ak without those thrilling Czech violins? 
+that you blink Still, What is Dvořák without those thrilling Czech violins? 
 They play so briliantly, with a sort of frenzied elan. 
 It's an effortless brilliance, like confident peasant dancing.
 And the Czech Philharmonic certainly sounds more Czech--no surprise--especially the violins.
@@ -95,7 +95,7 @@ In Milwaukee they have to strain for whatever brilliance they attain.
 In London they seem to lose body in the brilliant passages.
 
 Kubelik has the Berlin Philharmonic, and they sound just great---especially the violins.
-Dvo\v{r}\'ak was inclined to work his violins hard; they carry much of the music. 
+Dvořák was inclined to work his violins hard; they carry much of the music. 
 DG (or MHS same recording) is inclined, as you know, to go light on the bass---to aim
 for a ``clean'' sound with a lot of definition and detail. 
 But the Kubelik is less that way than the Neumann; the bass is actually
@@ -150,13 +150,13 @@ London Sym/Kertesz & London NA
 \subsection*{Symphony 2}
 When this symphony became available on LP (Kertesz, 1967) Ray Minshull wrote glowing notes,
 praising the work to the skies (``outstanding achievement...magnificent road sweep...an abundance
-of vintage-type Dvo\v{r}\'ak themes...remind one of Tchaikovsky''). 
+of vintage-type Dvořák themes...remind one of Tchaikovsky''). 
 Now it's true that in those days prospective yers could read the liner notes
 on the back the album, and maybe Mr Minshull was ``laying it on''
 to sell an utterly unknown work. But those of us who fell for it were
 sorely disappointed. It is a dull and boring symphony without any 
-``broad sweep'' or ``Dvo\v{r}\'ak-type themes'' at all---and Tchaikovsky is the last composer
-one would be reminded of. All of us agree that the Second is the weakest Dvo\v{r}\'ak symphony,
+``broad sweep'' or ``Dvořák-type themes'' at all---and Tchaikovsky is the last composer
+one would be reminded of. All of us agree that the Second is the weakest Dvořák symphony,
 and most of us could happily live without it. It starts out rather nicely but
 never goes anywhere; it rambles and drifts, and there are no memorable melodies
 and none of the youthful vigor of \No1. 55 minutes is far too long for its meager material.
@@ -181,17 +181,17 @@ London Sym/Kertesz & London NA
 
 
 This one came eight years after the first two, and it was performed: Simetana led
-the Prague Philharmonic. It's the only Dvo\v{r}\'ak symphony with only three movements. 
+the Prague Philharmonic. It's the only Dvořák symphony with only three movements. 
 The middle one is his longest slow movement. It's basically a theme and variations,
 but the theme gives birth to themelets. In the middle of it a catchy march-like
-section in pure Dvo\v{r}\'ak rhythm (dum, dum, dum-da-DUM-dum) acts as a scherzo.
+section in pure Dvořák rhythm (dum, dum, dum-da-DUM-dum) acts as a scherzo.
 It builds up, then sub-sides; but it returns slower and quieter in the coda
-of the movement. Dvo\v{r}\'ak still hasn't written a good slow movement, 
+of the movement. Dvořák still hasn't written a good slow movement, 
 but there is a sort of genius in the way this is organized-and you'll never forget that march.
 
 The opening movement has wonderful flow and warmth; you are hooked right from the start. And the finale has an excitement and drive that will remind you of Schubert's Ninth.
-Dvo\v{r}\'ak has Schubert's light-hearted playful-ness, too. Still, the orchestration of this symphony is sumptuous, almost Wagnerian. But, Schubert and Wagner aside, Dvo\v{r}\'ak always sounds only like Dvo\v{r}\'ak---he could never be mistaken for anyone else. And he loved this symphony all his life. Brahms loved it, too, and thought it worthy of the Austrian State Prize.
-(The critic Hanslick was also on the committee, and Dvo\v{r}\'ak got a five-year government grant out of it.)
+Dvořák has Schubert's light-hearted playful-ness, too. Still, the orchestration of this symphony is sumptuous, almost Wagnerian. But, Schubert and Wagner aside, Dvořák always sounds only like Dvořák---he could never be mistaken for anyone else. And he loved this symphony all his life. Brahms loved it, too, and thought it worthy of the Austrian State Prize.
+(The critic Hanslick was also on the committee, and Dvořák got a five-year government grant out of it.)
 
 Järvi is much smoother than Kubelik. He has a natural flow and is both confident and serene. Kubelik is frantic, raucous, blasty---out to prove something---except in II. Järvi is faster, except in III. 
 In II Kubelik constantly manipulates the tempos, fusses all the time, 
@@ -203,7 +203,7 @@ Kubelik takes 5 minutes for the march, playing around with its tempos to get mor
 expression out of it. Again it sounds manipulated. Järvi takes almost two minutes less,
 never letting up on its forward motion.
 I'm with Järvi. Once the march is essentially
-over, the movement never quite falls back to its bland beginning; the march has given life to the other themes too! The Berlin Philharmonic saves the day again and again. The strings especially are way ahead of any other orchestra that has recorded this. But up to this point Kubelik has not won our hearts the way Dvo\v{r}\'ak should.
+over, the movement never quite falls back to its bland beginning; the march has given life to the other themes too! The Berlin Philharmonic saves the day again and again. The strings especially are way ahead of any other orchestra that has recorded this. But up to this point Kubelik has not won our hearts the way Dvořák should.
 
 Kubelik drives things on to an exciting conclusion, but it still sounds manipulated.
 Symphony 3 is Kubelik's worst recording. Järvi is again utterly natural, the music finding a more comfortable pace but building almost inexorably to a thrilling conclusion.
@@ -222,9 +222,9 @@ London Sym/Kertesz & London set (NA)
 
 \section*{Symphony 4}
 
-This is less smooth and flowing than \No3. It has two striking Dvo\v{r}\'ak rhythms
-and two gorgeous flowing melodies. You get one of each in I; the rhythm is TA-ta-tum-te-DUM. II is a long theme with variations-very Wagnerian; it is not very original, but it's his best slow movement so far. Ill is a swaggering scherzo-village music. Then comes the repetitious IV, where the first theme is another Dvo\v{r}\'ak rhythm---rum-tum, RUM-ti-tum---heard 17 times—and the second one of his trademark flowing melodies. The overall
-impression when you've heard it all is of exuberant grandeur-and maybe that's a good description of Dvo\v{r}\'ak's music in general.
+This is less smooth and flowing than \No3. It has two striking Dvořák rhythms
+and two gorgeous flowing melodies. You get one of each in I; the rhythm is TA-ta-tum-te-DUM. II is a long theme with variations-very Wagnerian; it is not very original, but it's his best slow movement so far. Ill is a swaggering scherzo-village music. Then comes the repetitious IV, where the first theme is another Dvořák rhythm---rum-tum, RUM-ti-tum---heard 17 times—and the second one of his trademark flowing melodies. The overall
+impression when you've heard it all is of exuberant grandeur-and maybe that's a good description of Dvořák's music in general.
 
 The Kertesz stood alone for years as the only really good recording. It's quite bracing and will always be worth hearing. At this stage Kertesz's scherzo is still the most exciting. The Kubelik was no particular threat: Carl Bauman calls it turgid; I call it jumpy: the scherzo seems especially lumpy, and the second theme of the finale is especially jittery---has no repose. There is more bounce and surge and bump than flow in Kubelik's Fourth. The Järvi is no threat either---soggy and boring.
 
@@ -242,18 +242,18 @@ London Sym/Kertesz & London NA
 
 \section*{Symphony 5}
 
-Dvo\v{r}\'ak seems to have simplified his style
+Dvořák seems to have simplified his style
 a bit for this one. The opening is very pastoral----the woods, the fields, the birds. It
-could easily be by Smetana (Bohemia's Forests and Meadows). The opening clarinet theme is light and cheery. The theme of innocent enjoyment of nature seems to carry thru the whole of I, including an ingenious and serene coda. II has a lovely cello melody. III is bursting with song and wit---a typical Dvo\v{r}\'ak scherzo. IV involves a change of pace and key, but a good conductor can make it seem a natural outgrowth of what has come before. It's quite stirring, and the whole symphony seems to have been building up to it, when you look back. It's
+could easily be by Smetana (Bohemia's Forests and Meadows). The opening clarinet theme is light and cheery. The theme of innocent enjoyment of nature seems to carry thru the whole of I, including an ingenious and serene coda. II has a lovely cello melody. III is bursting with song and wit---a typical Dvořák scherzo. IV involves a change of pace and key, but a good conductor can make it seem a natural outgrowth of what has come before. It's quite stirring, and the whole symphony seems to have been building up to it, when you look back. It's
 no longer a pastoral symphony by the time you reach the last movement.
 
 The Kubelik is very exciting, and part of it is certainly the Berlin Philharmonic: listen to those strings! But I prefer the Scottish oboe (Järvi). There is no difference in tempos between Järvi and Kubelik---a matter of a few seconds here and there-and the Kertesz is pretty close, too. Three terrific conductors in great form. The Järvi is recorded further back in the hall; I like that; Tom Godell likes it less, and Steven Haller complains bitterly of echo-chamber sound. The Kubelik and Kertesz are closer up. Sometimes Kubelik startles you, because an orchestral outburst can seem so close at hand. Kertesz sounded smoother on LP than on CD. But I have to say that it's impossible to choose among these three. I have even come to accept Kubelik's I, which I objected to in the 1990 overview. The clarinet theme is so winsome, and the movement gets so exciting that I can't figure out what I once objected to—probably just that the other two conductors are a little smoother, more pastoral
 and flowing.
 
 The Neumann is rather dull. The sound is crisp, and the orchestra plays well; but you will miss the intensity and alertness, the contrasts and the coherence of a conductor like Järvi. In fact, Järvi has it down perfectly: he seems more Czech than Neumann. Pe\v{s}ek again comes thru here, with the same virtues as his 4th: glorious sound, great orchestra, natural Czech interpretation. Macal has the virtues and drawbacks you would expect. The Milwaukee Symphony plays very beautifully, but the strings are not as thrilling as the Czech or Berlin ones. The sound is as good as it gets (if you like it back-in-the-hall; Steven Haller prefers more of an edge and finds it muffled---review this issue).
-Macal is choppier and more energetic than Järvi---or almost anyone else---but I prefer Dvo\v{r}\'ak smoother and more relaxed. IV is about as good as it gets anywhere. Koss's notes are not well written.
+Macal is choppier and more energetic than Järvi---or almost anyone else---but I prefer Dvořák smoother and more relaxed. IV is about as good as it gets anywhere. Koss's notes are not well written.
 
-The old Rowicki is pretty good---one of his better Dvo\v{r}\'aks. Mr Haldeman calls the ansons fresh and spontaneous, but others don't know it. Steven Haller liked the Naxos Gunzenhauser, but it is coupled
+The old Rowicki is pretty good---one of his better Dvořáks. Mr Haldeman calls the ansons fresh and spontaneous, but others don't know it. Steven Haller liked the Naxos Gunzenhauser, but it is coupled
 with a less-than-competitive 7th. Still, if you don't know the 5th, Naxos gives you a cheap way to hear a good performance of it.
 
 \st
@@ -266,13 +266,13 @@ Milwaukee/Macal & Koss 1026
 
 \section*{Symphony 6}
 
-This one was written for Hans Richter and the Vienna Phiharmonic in 1880, but the first performance took place in Prague, and it took the Vienna Philharmonic a long time to get around to it (though Richter conducted it often in other cities). It is in the same key as the Brahms Second, but its opening resembles the Brahms Fourth---and it's another brilliant opening that ``hooks'' the listener right away. II is sweet and gentle, and near the end we hear a hint of the quiet violin solo near the end of Also Sprach Zarathustra. The scherzo has the usual Dvo\v{r}\'ak rhythmic vigor, and the trio is serene.
+This one was written for Hans Richter and the Vienna Phiharmonic in 1880, but the first performance took place in Prague, and it took the Vienna Philharmonic a long time to get around to it (though Richter conducted it often in other cities). It is in the same key as the Brahms Second, but its opening resembles the Brahms Fourth---and it's another brilliant opening that ``hooks'' the listener right away. II is sweet and gentle, and near the end we hear a hint of the quiet violin solo near the end of Also Sprach Zarathustra. The scherzo has the usual Dvořák rhythmic vigor, and the trio is serene.
 The final movement is happy and untroubled.
 
 For some reason, Kubelik takes longer over that last movement than anyone else. His tempos are varied more; some parts are faster than most conductors. The Berlin Philharmonic is simply unbeatable. The Kubelik remains a very exciting and dramatic recording-almost a lesson in great conducting: how to make the details count while building a whole structure that makes sense and reaches all the peaks. He has a lot of fire, but there are also a lot of drastic tempo shifts.
 
 Some of us prefer the music less manipulated, with a more natural and dependable flow. For that it is impossible to beat B\v{e}lohlavek. He enriches the music with majesty and subtlety (listen to those strings!).
-He also has the best sound of any-absolutely and without doubt. Kertesz is more emphatic than B\v{e}lohlavek---and brassier and brasher---but still softer and gentler than Kubelik. He also has better sound than Kubelik, but it is closer-up sound, and that may irritate some listeners. But I am very unhappy with his exposition repeat: four minutes into I he starts all over---and rather dashes thru it all the second time around. Why bother? Dvo\v{r}\'ak himself never took that repeat and never wanted it.
+He also has the best sound of any-absolutely and without doubt. Kertesz is more emphatic than B\v{e}lohlavek---and brassier and brasher---but still softer and gentler than Kubelik. He also has better sound than Kubelik, but it is closer-up sound, and that may irritate some listeners. But I am very unhappy with his exposition repeat: four minutes into I he starts all over---and rather dashes thru it all the second time around. Why bother? Dvořák himself never took that repeat and never wanted it.
 
 Libor Pe\v{s}ek, who impressed us so much in a number of the other symphonies, leaves us cold in this one. (Why is it that no one seems to do them all well?) The sound is a little distant this time, and the conductor seems to float thru the music—misses a lot of points that Kubelik and Kertesz facilitate. Those two conductors are more cumulative-know how to build a climax. They are also more coherent, more stirring, more heady-more of a total experience (I include B\v{e}lohlavek in this description). It's the same Czech Philharmonic that plays for B\v{e}lohlavek, and they sound very good, but B\v{e}lohlavek has figured this symphony out and Pe\v{s}ek has not.
 
@@ -282,7 +282,7 @@ Neumann's 1982 recording---the one readily available right now---is quite beauti
 The sound is not as appealing as the B\v{e}lohlavek,
 unless you like it cleaner (as opposed to warmer), but those Czech Philharmonic violins are something special. It, like the rest of his series, is in a box with two other sym-phonies—4 and 5.
 
-Macal is pretty straightforward, with little tempo manipulation. I is strong and lite, tough but with sensitive detail---very appealing. II is very lovely and makes the Järvi sound insensitive. IV is as exciting as it gets. The Milwaukee Symphony again plays beautifully, and the sound is demonstration-class Jan/ Feb 1990). The Cleveland Orchestra also sounds wonderful for Dohnanyi, and his II is just right. We decided that the conductor and the engineering overdramatize the music (Nov/ Dec 1991). The Rowicki-along with his 5—is excellent, but the sound is 1960s and not up to Kertesz, let alone B\v{e}lohlavek. The Suitner was reviewed as "energetic but ordi-nary". Slatkin has the slowest II and comes in an expensive box set available only from the St Louis Symphony. Tom Godell considers it the best 6th ever, and I remember it as one of the best. Another specific criticism of the Järvi is that his tempo in IV is cranked up too far—the orchestra has trouble with it, too Jan/Feb 1988—Haller). Beyond that, it just seems generally inferior to the ones we recommend.
+Macal is pretty straightforward, with little tempo manipulation. I is strong and lite, tough but with sensitive detail---very appealing. II is very lovely and makes the Järvi sound insensitive. IV is as exciting as it gets. The Milwaukee Symphony again plays beautifully, and the sound is demonstration-class Jan/ Feb 1990). The Cleveland Orchestra also sounds wonderful for Dohnanyi, and his II is just right. We decided that the conductor and the engineering overdramatize the music (Nov/ Dec 1991). The Rowicki---along with his 5---is excellent, but the sound is 1960s and not up to Kertesz, let alone B\v{e}lohlavek. The Suitner was reviewed as ``energetic but ordinary''. Slatkin has the slowest II and comes in an expensive box set available only from the St Louis Symphony. Tom Godell considers it the best 6th ever, and I remember it as one of the best. Another specific criticism of the Järvi is that his tempo in IV is cranked up too far—the orchestra has trouble with it, too Jan/Feb 1988—Haller). Beyond that, it just seems generally inferior to the ones we recommend.
 
 \st
 Czech Phil/Belohlavek & Chandos 9170\\
@@ -294,10 +294,11 @@ Czech Phil/NeumannSupraphon & 1005 [2CD]
 
 \section*{Symphony 7}
 
-The Seventh was written for the London Philharmonic in 1885, and Dvorak conducted the first performance. 
+The Seventh was written for the London Philharmonic in 1885, and  Dvořák conducted the first performance. 
 It was an immediate success, and wherever it has been played ever since it has won many friends. Sir Donald Tovey placed it alongside the Brahms four as the greatest symphonies since Beethoven.
-Other eminent critics have called it profusely inspired and a great symphony by any stan-dard. Many think it is Dvorak's greatest.
-It is also his most Brahmsian. It took him only three months to write it—not surprising, considering the level of inspiration. Some people hear hints of two great themes in it: the second theme in I resembles the beautiful cello solo in the Second Brahms Piano Concerto, and in Il one spot sounds like the love duet from Tristan and Isolde. (To me it all sounds like Brahms, not Wagner.) The Scherzo trips along lightly and cheerfully; conductors are inclined to over-inflect it, but it's really a prime example of the natural flow of Dvorak's music. Yet there is passion in this symphony, and that can be slighted as well. It's not an easy work to get right.
+Other eminent critics have called it profusely inspired and a great symphony by any standard. Many think it is Dvorak's greatest.
+
+It is also his most Brahmsian. It took him only three months to write it—not surprising, considering the level of inspiration. Some people hear hints of two great themes in it: the second theme in I resembles the beautiful cello solo in the Second Brahms Piano Concerto, and in II one spot sounds like the love duet from Tristan and Isolde. (To me it all sounds like Brahms, not Wagner.) The Scherzo trips along lightly and cheerfully; conductors are inclined to over-inflect it, but it's really a prime example of the natural flow of Dvorak's music. Yet there is passion in this symphony, and that can be slighted as well. It's not an easy work to get right.
 Suitner's 7 is forceful, with sharp attacks
 
 
