--- a/arg/dvorak.tex
+++ b/arg/dvorak.tex
@@ -270,21 +270,21 @@ The final movement is happy and untroubled.
 
 For some reason, Kubelik takes longer over that last movement than anyone else. His tempos are varied more; some parts are faster than most conductors. The Berlin Philharmonic is simply unbeatable. The Kubelik remains a very exciting and dramatic recording---almost a lesson in great conducting: how to make the details count while building a whole structure that makes sense and reaches all the peaks. He has a lot of fire, but there are also a lot of drastic tempo shifts.
 
-Some of us prefer the music less manipulated, with a more natural and dependable flow. For that it is impossible to beat B\v{e}lohlavek. He enriches the music with majesty and subtlety (listen to those strings!).
-He also has the best sound of any-absolutely and without doubt. Kertesz is more emphatic than B\v{e}lohlavek---and brassier and brasher---but still softer and gentler than Kubelik. He also has better sound than Kubelik, but it is closer-up sound, and that may irritate some listeners. But I am very unhappy with his exposition repeat: four minutes into I he starts all over---and rather dashes thru it all the second time around. Why bother? Dvořák himself never took that repeat and never wanted it.
+Some of us prefer the music less manipulated, with a more natural and dependable flow. For that it is impossible to beat Bělohlávek. He enriches the music with majesty and subtlety (listen to those strings!).
+He also has the best sound of any-absolutely and without doubt. Kertesz is more emphatic than Bělohlávek---and brassier and brasher---but still softer and gentler than Kubelik. He also has better sound than Kubelik, but it is closer-up sound, and that may irritate some listeners. But I am very unhappy with his exposition repeat: four minutes into I he starts all over---and rather dashes thru it all the second time around. Why bother? Dvořák himself never took that repeat and never wanted it.
 
-Libor Pe\v{s}ek, who impressed us so much in a number of the other symphonies, leaves us cold in this one. (Why is it that no one seems to do them all well?) The sound is a little distant this time, and the conductor seems to float thru the music—misses a lot of points that Kubelik and Kertesz facilitate. Those two conductors are more cumulative-know how to build a climax. They are also more coherent, more stirring, more heady-more of a total experience (I include B\v{e}lohlavek in this description). It's the same Czech Philharmonic that plays for B\v{e}lohlavek, and they sound very good, but B\v{e}lohlavek has figured this symphony out and Pe\v{s}ek has not.
+Libor Pe\v{s}ek, who impressed us so much in a number of the other symphonies, leaves us cold in this one. (Why is it that no one seems to do them all well?) The sound is a little distant this time, and the conductor seems to float thru the music—misses a lot of points that Kubelik and Kertesz facilitate. Those two conductors are more cumulative-know how to build a climax. They are also more coherent, more stirring, more heady-more of a total experience (I include Bělohlávek in this description). It's the same Czech Philharmonic that plays for Bělohlávek, and they sound very good, but Bělohlávek has figured this symphony out and Pe\v{s}ek has not.
 
 Another Czech Philharmonic recording---with Ancerl---promises a lot but lets us down.
 For some reason the conducting is brusque and routine, with very little shaping.
 Neumann's 1982 recording---the one readily available right now---is quite beautiful.
-The sound is not as appealing as the B\v{e}lohlavek,
+The sound is not as appealing as the Bělohlávek,
 unless you like it cleaner (as opposed to warmer), but those Czech Philharmonic violins are something special. It, like the rest of his series, is in a box with two other symphonies: 4 and 5.
 
-Macal is pretty straightforward, with little tempo manipulation. I is strong and lite, tough but with sensitive detail---very appealing. II is very lovely and makes the Järvi sound insensitive. IV is as exciting as it gets. The Milwaukee Symphony again plays beautifully, and the sound is demonstration-class Jan/ Feb 1990). The Cleveland Orchestra also sounds wonderful for Dohnanyi, and his II is just right. We decided that the conductor and the engineering overdramatize the music (Nov/ Dec 1991). The Rowicki---along with his 5---is excellent, but the sound is 1960s and not up to Kertesz, let alone B\v{e}lohlavek. The Suitner was reviewed as ``energetic but ordinary''. Slatkin has the slowest II and comes in an expensive box set available only from the St Louis Symphony. Tom Godell considers it the best 6th ever, and I remember it as one of the best. Another specific criticism of the Järvi is that his tempo in IV is cranked up too far—--the orchestra has trouble with it, too Jan/Feb 1988—Haller). Beyond that, it just seems generally inferior to the ones we recommend.
+Macal is pretty straightforward, with little tempo manipulation. I is strong and lite, tough but with sensitive detail---very appealing. II is very lovely and makes the Järvi sound insensitive. IV is as exciting as it gets. The Milwaukee Symphony again plays beautifully, and the sound is demonstration-class Jan/Feb 1990). The Cleveland Orchestra also sounds wonderful for Dohnanyi, and his II is just right. We decided that the conductor and the engineering overdramatize the music (Nov/ Dec 1991). The Rowicki---along with his 5---is excellent, but the sound is 1960s and not up to Kertesz, let alone Bělohlávek. The Suitner was reviewed as ``energetic but ordinary''. Slatkin has the slowest II and comes in an expensive box set available only from the St Louis Symphony. Tom Godell considers it the best 6th ever, and I remember it as one of the best. Another specific criticism of the Järvi is that his tempo in IV is cranked up too far—--the orchestra has trouble with it, too Jan/Feb 1988—Haller). Beyond that, it just seems generally inferior to the ones we recommend.
 
 \st
-Czech Phil/Bělohlavek & Chandos 9170\\
+Czech Phil/Bělohlávek & Chandos 9170\\
 Berlin/Kubelik  & DG or MHS set\\
 London Sym/Kertesz & London NA\\
 Milwaukee/Macal & Koss 1001\\
@@ -295,9 +295,9 @@ Czech Phil/Neumann & Supraphon 1005 [2CD]
 
 The Seventh was written for the London Philharmonic in 1885, and  Dvořák conducted the first performance. 
 It was an immediate success, and wherever it has been played ever since it has won many friends. Sir Donald Tovey placed it alongside the Brahms four as the greatest symphonies since Beethoven.
-Other eminent critics have called it profusely inspired and a great symphony by any standard. Many think it is Dvorak's greatest.
+Other eminent critics have called it profusely inspired and a great symphony by any standard. Many think it is Dvořák's greatest.
 
-It is also his most Brahmsian. It took him only three months to write it—not surprising, considering the level of inspiration. Some people hear hints of two great themes in it: the second theme in I resembles the beautiful cello solo in the Second Brahms Piano Concerto, and in II one spot sounds like the love duet from Tristan and Isolde. (To me it all sounds like Brahms, not Wagner.) The Scherzo trips along lightly and cheerfully; conductors are inclined to over-inflect it, but it's really a prime example of the natural flow of Dvorak's music. Yet there is passion in this symphony, and that can be slighted as well. It's not an easy work to get right.
+It is also his most Brahmsian. It took him only three months to write it—not surprising, considering the level of inspiration. Some people hear hints of two great themes in it: the second theme in I resembles the beautiful cello solo in the Second Brahms Piano Concerto, and in II one spot sounds like the love duet from Tristan and Isolde. (To me it all sounds like Brahms, not Wagner.) The Scherzo trips along lightly and cheerfully; conductors are inclined to over-inflect it, but it's really a prime example of the natural flow of Dvořák's music. Yet there is passion in this symphony, and that can be slighted as well. It's not an easy work to get right.
 Suitner's 7 is forceful, with sharp attacks
 
 
